<resources>
    <string name="app_name">RITM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Log in or register</string>
    <string name="start">Let\'s go!</string>
    <string name="check">check</string>
    <string name="grammar">Grammar practise</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Log in</string>
    <string name="register">Not registered yet? Click here!</string>
    <string name="email">Write your e-mail here</string>
    <string name="password">Password</string>
    <string name="registerHint">Don\'t have an account? Click here and register!</string>
    <string name="registrationDescription">Please, fill the information below</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="accountCreation">Create an account</string>
    <string name="logout">Log out</string>
    <string name="main_page">Main page</string>
    <string name="finish">Finish</string>
    <string name="topic1">Давайте познакомимся!</string>
    <string name="l1_grammar_1_title_1" />
    <string name="L1grammar1_title">Gender</string>
    <string name="NB">NB!</string>
    <string name="l1_g1_description1">All nouns in Russian have gender: they are either masculine, feminine or neuter:</string>
    <string name="l1_g1_description2">•\tSome animate nouns (including familiar forms of first names) that end in - а or - я are masculine.</string>
    <string name="l1_g1_description3">Он папа/дедушка/Коля</string>
    <string name="l1_g1_description4">but \t Она мама/бабушка/Маша</string>
    <string name="l1_g1_description5">•\tGender is not reflected, however, in the plural: они (they) is used for all genders. – ы and – и are two common endings for plural:</string>
    <string name="l1_g1_description6">Джинсы -ы \t Очки - и</string>
    <string name="l1_g1_description7">•\tBe aware of such neuter nouns which have –я ending: время, имя, пламя, племя etc.</string>
    <string name="l1_grammar_1_title_2">Write он before the masculine nouns, она before the feminine nouns, оно before the neuter nouns, and они before the plural nouns.</string>
    <string name="l1_g1_question0">весы</string>
    <string name="l1_g1_question1">волк </string>
    <string name="l1_g1_question2">мост</string>
    <string name="l1_g1_question3">стихотворение</string>
    <string name="l1_g1_question4">носки</string>
    <string name="l1_g1_question5">фамилия</string>
    <string name="l1_g1_question6">государство </string>
    <string name="l1_g1_question7">медаль</string>
    <string name="l1_g1_question8">джинсы </string>
    <string name="l1_g1_question9">чувство</string>
    <string name="l1_g1_question10">музей</string>
    <string name="l1_g1_question11">время </string>
    <string name="l1_g1_question12">история </string>
    <string name="l1_g1_question13">дружба </string>
    <string name="l1_g1_question14">архитектура</string>
    <string name="l1_g1_question15">слово</string>
    <string name="l1_g1_question16">поколение </string>
    <string name="l1_g1_question17">словарь </string>
    <string name="l1_g1_question18">брюки </string>
    <string name="l1_g1_question19">проблема </string>
    <string name="l1_g1_question20">очки </string>
    <string name="l1_g1_question21">деньги </string>
    <string name="l1_g1_question22">такси </string>
    <string name="l1_g1_question23">парк</string>
    <string name="l1_g1_question24">здание </string>
    <string name="l1_g1_question25">стол </string>
    <string name="l1_g1_question26">месяц </string>
    <string name="l1_g1_question27">язык </string>
    <string name="l1_g1_question28">страна </string>
    <string name="l1_g1_question29">часы </string>
    <string name="l1_g1_question30">школа </string>
    <string name="l1_g1_question31">ножницы </string>
    <string name="l1_g1_question32">ученик</string>
    <string name="L1grammar2_title">Plural of nouns</string>
    <string name="l1_g2_description1">*The choice between the endings –ы and –и is determined by  the Rule 1 below.</string>
    <string name="l1_g2_description3">NB! There are some irregular plural forms which can be described according to these rules:</string>
    <string name="l1_grammar_2_title_2">Write the singular words in the plural and vice versa.</string>
    <string name="l1_g2_question0"> слово -</string>
    <string name="l1_g2_question1"> язык -</string>
    <string name="l1_g2_question2">- вопросы </string>
    <string name="l1_g2_question3"> город -</string>
    <string name="l1_g2_question4"> друг -</string>
    <string name="l1_g2_question5">- растения </string>
    <string name="l1_g2_question6">- люди </string>
    <string name="l1_g2_question7"> здание -</string>
    <string name="l1_g2_question8">- истории </string>
    <string name="l1_g2_question9"> гора -</string>
    <string name="l1_g2_question10">- имена </string>
    <string name="l1_g2_question11"> проблема -</string>
    <string name="l1_g2_question12">- школы </string>
    <string name="l1_g2_question13"> время -</string>
    <string name="l1_g2_question14">- чувства </string>
    <string name="L1grammar3_title">Adjective Agreement: Introduction</string>
    <string name="l1_g3_description1">Adjectives agree with the noun in gender.</string>
    <string name="l1_g3_description2">Think of -ый, -ая, -ое, and -ые as the basic adjective endings that have some slight variations. For example, when the masculine ending is stressed, it is spelled –ой, as in Большой театр.</string>
    <string name="l1_g3_description3">он плох-о́й \t она плох-а́я</string>
    <string name="l1_g3_description4">but: он хоро́ш-ий \t она хоро́ш-ая</string>
    <string name="l1_grammar_2_title_3">Fill in the adjectives with the correct endings according to the gender.</string>
    <string name="l1_g3_first_0">﻿Больш</string>
    <string name="l1_g3_second_0"> страна</string>
    <string name="l1_g3_first_1">Интересн</string>
    <string name="l1_g3_second_1"> музей </string>
    <string name="l1_g3_first_2">Длинн</string>
    <string name="l1_g3_second_2"> история </string>
    <string name="l1_g3_first_3">Русск</string>
    <string name="l1_g3_second_3"> словарь </string>
    <string name="l1_g3_first_4">Нов</string>
    <string name="l1_g3_second_4"> ученик</string>
    <string name="l1_g3_first_5">Маленьк</string>
    <string name="l1_g3_second_5"> ножницы</string>
    <string name="l1_g3_first_6">Больш</string>
    <string name="l1_g3_second_6"> стол</string>
    <string name="l1_g3_first_7">Красив</string>
    <string name="l1_g3_second_7"> парк </string>
    <string name="l1_g3_first_8">Нов</string>
    <string name="l1_g3_second_8"> часы</string>
    <string name="l1_g3_first_9">Стар</string>
    <string name="l1_g3_second_9"> архитектура</string>
    <string name="l1_g3_first_10">Хорош</string>
    <string name="l1_g3_second_10"> школа</string>
    <string name="l1_g3_first_11">Нов</string>
    <string name="l1_g3_second_11"> месяц </string>
    <string name="l1_g3_first_12">Больш</string>
    <string name="l1_g3_second_12"> здание</string>
    <string name="l1_g3_first_13">Маленьк</string>
    <string name="l1_g3_second_13"> мост</string>
    <string name="l1_g3_first_14">Хорош</string>
    <string name="l1_g3_second_14"> стол</string>
    <string name="l1_g3_first_15">Нов</string>
    <string name="l1_g3_second_15"> медаль </string>
    <string name="l1_g3_first_16">Больш</string>
    <string name="l1_g3_second_16"> брюки</string>
    <string name="l1_g3_first_17">Маленьк</string>
    <string name="l1_g3_second_17"> проблема </string>
    <string name="score_for_a_game">Score for a game:</string>
    <string name="correct_answers">Number of correct answers:</string>
    <string name="see_errors">Look at your mistakes</string>
    <string name="correct_answers_1">Mistakes</string>
    <string name="see_errors_1">mistakes</string>
    <string name="ok">Ok</string>
    <string name="topic2">Моя семья</string>
    <string name="topic3">Национальности</string>
    <string name="l2_v3_text0">﻿- Привет! Как тебя зовут?</string>
    <string name="l2_v3_text1">- Привет, меня зовут Катя, а тебя?</string>
    <string name="l2_v3_text2">- Максим, очень приятно.</string>
    <string name="l2_v3_text3">- Откуда ты, Максим?</string>
    <string name="l2_v3_text4">- Я из России, я учусь в Москве. </string>
    <string name="l2_v3_text5">- Я из Испании. Сколько тебе лет? </string>
    <string name="l2_v3_text6">- Мне двадцать, а тебе?</string>
    <string name="l2_v3_text7">- Мне восемнадцать. </string>
    <string name="l2_v3_text8">- Приятно познакомиться! </string>
    <string name="title4">Знакомство</string>
    <string name="l2_v3_text9">- Взаимно!</string>
    <string name="L2grammar1_title">Personal Pronouns: Subject and Object Forms.</string>
    <string name="l2_g1_description1">*The neutral pronoun оно has the same object form as masculine pronoun его.</string>
    <string name="l2_g1_task1">Supply the missing subject forms of personal pronouns.</string>
    <string name="l2_g1_first_0">﻿Меня зовут Екатерина. </string>
    <string name="l2_g1_second_0"> русская. </string>
    <string name="l2_g1_first_1">Его зовут Харуко. </string>
    <string name="l2_g1_second_1"> японец. </string>
    <string name="l2_g1_first_2">Как тебя зовут? </string>
    <string name="l2_g1_second_2"> студентка? </string>
    <string name="l2_g1_first_3">Марина учительница. </string>
    <string name="l2_g1_second_3"> очень добрая. </string>
    <string name="l2_g1_first_4">Их зовут Мэри и Джон. </string>
    <string name="l2_g1_second_4"> из Америки.</string>
    <string name="l2_g1_first_5">Как их зовут? </string>
    <string name="l2_g1_second_5"> веселые! </string>
    <string name="l2_g1_first_6"></string>
    <string name="l2_g1_second_6"> учимся в университете. </string>
    <string name="l2_g1_first_7">Как Вас зовут? </string>
    <string name="l2_g1_second_7"> откуда?</string>
    <string name="l2_g1_first_8">Здравствуйте, </string>
    <string name="l2_g1_second_8"> Таня. – Здравствуй, Таня.</string>
    <string name="l2_g1_first_9">Я и мои родители из Германии. </string>
    <string name="l2_g1_second_9"> немцы. </string>
    <string name="l2_g2_string1">- Привет, можно с тобой познакомиться? Как</string>
    <string name="l2_g2_string2">зовут?</string>
    <string name="l2_g2_string3">- Привет!</string>
    <string name="l2_g2_string4">зовут Шарлотта. Мне 16 лет, я из</string>
    <string name="l2_g2_string5">Торонто. А как</string>
    <string name="l2_g2_string6">зовут?</string>
    <string name="l2_g2_string7">зовут Дуглас.</string>
    <string name="l2_g2_string8">американец, мне 17 лет.</string>
    <string name="l2_g2_string9">- У</string>
    <string name="l2_g2_string10">большая семья, Дуглас?</string>
    <string name="l2_g2_string11">- Да. У меня есть сестра и брат.</string>
    <string name="l2_g2_string12">зовут</string>
    <string name="l2_g2_string19">- Вау,</string>
    <string name="l2_g2_string20">счастливый! У </string>
</resources>